syntax error removed for swagger issue
