# swagger/swagger.json
@@ -5,10 +5,10 @@
     "description": "Team 13 Final Project - API for managing events\n\n**Contributors**:\n- Berick Smith\n- Lenora Stevens\n- Ramon Felipe Castano\n- Livia Costa Lira de Medeiros\n\nThis API provides various endpoints for accessing resources. \n\n**Authentication Required**: Endpoints marked with a padlock icon are restricted and can only be accessed after logging in via GitHub using OAuth. \n\n**OAuth Login:** Authentication is handled via GitHub OAuth. To connect, use the following endpoints:\n\n- **Login**: https://cse-341-team13.onrender.com/github - Initiates the OAuth process with GitHub. \n- **Logout**: https://cse-341-team13.onrender.com/logout - Ends your session.",
     "version": "1.0.0"
   },
-  "host": "localhost:5000",
+  "host": "cse-341-team13.onrender.com",
   "basePath": "/",
   "schemes": [
-    "http"
+    "https"
   ],
   "securityDefinitions": {
     "OAuth2": {
@@ -1019,6 +1019,10 @@
                 "capacity": {
                   "type": "string",
                   "example": ""
+                },
+                "created_at": {
+                  "type": "string",
+                  "example": ""
                 }
               },
               "required": [
@@ -1027,7 +1031,8 @@
                 "city",
                 "state",
                 "postal",
-                "capacity"
+                "capacity",
+                "created_at"
               ]
             }
           }
@@ -1097,6 +1102,40 @@
             "required": true,
             "type": "string",
             "description": "Venue ID"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Updated venue data",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": ""
+                },
+                "address": {
+                  "type": "string",
+                  "example": ""
+                },
+                "city": {
+                  "type": "string",
+                  "example": ""
+                },
+                "state": {
+                  "type": "string",
+                  "example": ""
+                },
+                "postal": {
+                  "type": "string",
+                  "example": ""
+                },
+                "capacity": {
+                  "type": "string",
+                  "example": ""
+                }
+              }
+            }
           }
         ],
         "responses": {
